--- a/WSH_HomeAssignment.Infrastructure/WSH_HomeAssignment.Infrastructure.csproj
+++ b/WSH_HomeAssignment.Infrastructure/WSH_HomeAssignment.Infrastructure.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
+    <PackageReference Include="System.ServiceModel.Http" Version="6.2.0" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="6.2.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WSH_HomeAssignment.Domain\WSH_HomeAssignment.Domain.csproj" />
