--- a/WSH_HomeAssignment.Api/appsettings.json
+++ b/WSH_HomeAssignment.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=ExchangeRates;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
