--- a/WSH_HomeAssignment.Api/appsettings.json
+++ b/WSH_HomeAssignment.Api/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "https://localhost:7281",
+    "ValidIssuer": "https://localhost:4200",
+    "Secret": "JWTSecret!#1234#9182!#Cmewpaoxum12ex3w6d987727"
+  }
 }
