--- a/WSH_HomeAssignment.Api/appsettings.json
+++ b/WSH_HomeAssignment.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=ExchangeRates;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Database=exchange-rates;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
